k8s/multi-service.yaml
#
# Sets up multiple dummy Services to demonstrate
# environment variable handling.
#
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: dummy-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: back-end
  labels:
    app: dummy-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: backend
